--- a/war/index.html
+++ b/war/index.html
@@ -5,7 +5,7 @@
 	Developers: Henrique Polido, Ryan Anthony, Douglas Lally
 	Source code: https://github.com/Nican/wpischeduler
 	
-	Adapted to work with Workday in 2021 by Josh McKeen and Nick Markou
+	Modified to work with Workday in 2021 by Josh McKeen and Nick Markou
 	Source code: https://github.com/Jmckeen8/wpiplanner
 	
 	If changes are made to the project, please make a patch request. :) 
